[project]
name = "navigator-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.119.1",
    "openai-agents>=0.4.0",
    "pdf2image>=1.17.0",
    "pdfminer>=20191125",
    "pi-heif>=1.1.1",
    "qdrant-client>=1.15.1",
    "sentence-transformers>=5.1.2",
    "sqlalchemy>=2.0.44",
    "unstructured>=0.18.15",
    "unstructured-inference>=1.0.5",
]
